--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="stlye.css">
+
     <title>MIT APP Inventor apps</title>
 </head>
 <body>
-    <a href="dishes.apk">Mit egyek ma?</a>
+    <ul>
+        <li><a href="dishes.apk">Mit egyek ma?</a></li><br>
+        <li><a href="pizza.apk">Kelt pizzatészta</a></li><br>
+        <li><a href="zaszlos_suti.apk">Zászlós süti</a></li><br>
+        <li><a href="muffin.apk">Muffin</a></li><br>
+        <li><a href="paradiso.apk">Kinder Paradiso</a></li><br>
+        <li><a href="vanilias_epertorta.apk">Vaníliás epertorta</a></li><br>
+        <li><a href="kokuszos_csiga.apk">Kókuszos csiga</a></li><br>
+        <li><a href="love.apk">Love</a></li><br>
+    </ul>
 </body>
 </html>
