Move apk files to apks folder, move style.css to css folder and add dalma_receptjei.apk

--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="stlye.css">
+    <link rel="stylesheet" href="css/stlye.css">
 
     <title>MIT APP Inventor apps</title>
 </head>
 <body>
     <ul>
-        <li><a href="dishes.apk">Mit egyek ma?</a></li><br>
-        <li><a href="pizza.apk">Kelt pizzatészta</a></li><br>
-        <li><a href="zaszlos_suti.apk">Zászlós süti</a></li><br>
-        <li><a href="muffin.apk">Muffin</a></li><br>
-        <li><a href="paradiso.apk">Kinder Paradiso</a></li><br>
-        <li><a href="vanilias_epertorta.apk">Vaníliás epertorta</a></li><br>
-        <li><a href="kokuszos_csiga.apk">Kókuszos csiga</a></li><br>
-        <li><a href="love.apk">Love</a></li><br>
+        <li><a href="apks/dishes.apk">Mit egyek ma?</a></li><br>
+        <li><a href="apks/pizza.apk">Kelt pizzatészta</a></li><br>
+        <li><a href="apks/zaszlos_suti.apk">Zászlós süti</a></li><br>
+        <li><a href="apks/muffin.apk">Muffin</a></li><br>
+        <li><a href="apks/paradiso.apk">Kinder Paradiso</a></li><br>
+        <li><a href="apks/vanilias_epertorta.apk">Vaníliás epertorta</a></li><br>
+        <li><a href="apks/kokuszos_csiga.apk">Kókuszos csiga</a></li><br>
+        <li><a href="apks/love.apk">Love</a></li><br>
+        <li><a href="apks/dalma_receptjei.apk">Dalma receptjei</a></li><br>
     </ul>
 </body>
 </html>
