Add Vanced Manager

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="apks/kokuszos_csiga.apk">Kókuszos csiga</a></li><br>
         <li><a href="apks/love.apk">Love</a></li><br>
         <li><a href="apks/dalma_receptjei.apk">Dalma receptjei</a></li><br>
+        <li><a href="apks/Vanced_Manager_base.apk">Vanced Manager</a></li><br>
     </ul>
 </body>
 </html>
