--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/stlye.css">
 
-    <title>MIT APP Inventor apps</title>
+    <title>Android apps</title>
 </head>
 <body>
     <ul>
