Add apks to cards

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Scroll to top end -->
 
     <!-- Navbar start -->
-    <div class="container text-center pt-2">
+    <div class="container pt-2">
         <nav class="navbar navbar-expand-lg navbar-light bg-secondary alert">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <!-- Clock widget start -->
@@ -50,40 +50,40 @@
         <div class="row">
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="">
+                <img class="card-img-top" src="images/.png" alt="Mit egyek ma?">
                     <div class="card-body">
-                        <h5 class="card-title card-title-color"></h5>
-                        <a href="" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <h5 class="card-title card-title-color">Mit egyek ma?</h5>
+                        <a href="apks/dishes.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="">
+                <img class="card-img-top" src="images/.png" alt="Kelt pizzatészta">
                     <div class="card-body">
-                        <h5 class="card-title card-title-color"></h5>
-                        <a href="" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <h5 class="card-title card-title-color">Kelt pizzatészta</h5>
+                        <a href="apks/pizza.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="">
+                <img class="card-img-top" src="images/.png" alt="Zászlós süti">
                     <div class="card-body">
-                        <h5 class="card-title card-title-color"></h5>
-                        <a href="" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <h5 class="card-title card-title-color">Zászlós süti</h5>
+                        <a href="apks/zaszlos_suti.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="">
+                <img class="card-img-top" src="images/.png" alt="Muffin">
                     <div class="card-body">
-                        <h5 class="card-title card-title-color"></h5>
-                        <a href="" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <h5 class="card-title card-title-color">Muffin</h5>
+                        <a href="apks/muffin.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
@@ -92,40 +92,62 @@
         <div class="row py-4">
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="">
+                <img class="card-img-top" src="images/.png" alt="Kinder Paradiso">
                     <div class="card-body">
-                        <h5 class="card-title card-title-color"></h5>
-                        <a href="" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <h5 class="card-title card-title-color">Kinder Paradiso</h5>
+                        <a href="apks/paradiso.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="">
+                <img class="card-img-top" src="images/.png" alt="Vaníliás epertorta">
                     <div class="card-body">
-                        <h5 class="card-title card-title-color"></h5>
-                        <a href="" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <h5 class="card-title card-title-color">Vaníliás epertorta</h5>
+                        <a href="apks/vanilias_epertorta.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="">
+                <img class="card-img-top" src="images/.png" alt="Kókuszos csiga">
                     <div class="card-body">
-                        <h5 class="card-title card-title-color"></h5>
-                        <a href="" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <h5 class="card-title card-title-color">Kókuszos csiga</h5>
+                        <a href="apks/kokuszos_csiga.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
             
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="">
+                <img class="card-img-top" src="images/.png" alt="Dalma receptjei">
                     <div class="card-body">
-                        <h5 class="card-title card-title-color"></h5>
-                        <a href="" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <h5 class="card-title card-title-color">Dalma receptjei</h5>
+                        <a href="apks/dalma_receptjei.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row py-4">
+            <div class="col-sm pb-3 px-4">
+                <div class="card text-center div-card-bg">
+                <img class="card-img-top" src="images/.png" alt="Love">
+                    <div class="card-body">
+                        <h5 class="card-title card-title-color">Love</h5>
+                        <a href="apks/love.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm pb-3 px-4">
+                <div class="card text-center div-card-bg">
+                <img class="card-img-top" src="images/.png" alt="Vanced Manager">
+                    <div class="card-body">
+                        <h5 class="card-title card-title-color">Vanced Manager</h5>
+                        <a href="apks/Vanced_Manager_base.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
