--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Navbar start -->
     <div class="container pt-2">
-        <nav class="navbar navbar-expand-lg navbar-light bg-secondary alert">
+        <nav class="navbar navbar-expand-lg navbar-light alert alert-success">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <!-- Clock widget start -->
                 <form class="form-inline my-2 my-lg-0">
@@ -53,7 +53,7 @@
                 <img class="card-img-top" src="images/.png" alt="Mit egyek ma?">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Mit egyek ma?</h5>
-                        <a href="apks/dishes.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <a href="apks/dishes.apk" class="btn alert-success" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                 <img class="card-img-top" src="images/.png" alt="Kelt pizzatészta">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Kelt pizzatészta</h5>
-                        <a href="apks/pizza.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <a href="apks/pizza.apk" class="btn alert-success" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                 <img class="card-img-top" src="images/.png" alt="Zászlós süti">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Zászlós süti</h5>
-                        <a href="apks/zaszlos_suti.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <a href="apks/zaszlos_suti.apk" class="btn alert-success" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                 <img class="card-img-top" src="images/.png" alt="Muffin">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Muffin</h5>
-                        <a href="apks/muffin.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <a href="apks/muffin.apk" class="btn alert-success" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                 <img class="card-img-top" src="images/.png" alt="Kinder Paradiso">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Kinder Paradiso</h5>
-                        <a href="apks/paradiso.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <a href="apks/paradiso.apk" class="btn alert-success" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                 <img class="card-img-top" src="images/.png" alt="Vaníliás epertorta">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Vaníliás epertorta</h5>
-                        <a href="apks/vanilias_epertorta.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <a href="apks/vanilias_epertorta.apk" class="btn alert-success" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                 <img class="card-img-top" src="images/.png" alt="Kókuszos csiga">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Kókuszos csiga</h5>
-                        <a href="apks/kokuszos_csiga.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <a href="apks/kokuszos_csiga.apk" class="btn alert-success" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
@@ -125,7 +125,7 @@
                 <img class="card-img-top" src="images/.png" alt="Dalma receptjei">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Dalma receptjei</h5>
-                        <a href="apks/dalma_receptjei.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <a href="apks/dalma_receptjei.apk" class="btn alert-success" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
@@ -137,7 +137,7 @@
                 <img class="card-img-top" src="images/.png" alt="Love">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Love</h5>
-                        <a href="apks/love.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <a href="apks/love.apk" class="btn alert-success" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                 <img class="card-img-top" src="images/.png" alt="Vanced Manager">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Vanced Manager</h5>
-                        <a href="apks/Vanced_Manager_base.apk" class="btn btn-secondary" target="_blank">Letöltés</a>
+                        <a href="apks/Vanced_Manager_base.apk" class="btn alert-success" target="_blank">Letöltés</a>
                     </div>
                 </div>
             </div>
@@ -155,7 +155,7 @@
     </main>
     <!-- Content end -->
     
-    <footer class="container alert my-4">
+    <footer class="container alert alert-success my-4">
         Készítette: Márta Krisztián - Programtervező informatikus<br>Copyright © 2022
     </footer>
 
