Remove <img> tags from cards

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
         <div class="row">            
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="Dalma receptjei">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Dalma receptjei</h5>
                         <a href="apks/dalma_receptjei.apk" class="btn alert-success" target="_blank">Letöltés</a>
@@ -60,7 +59,6 @@
 
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="Mit egyek ma?">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Mit egyek ma?</h5>
                         <a href="apks/dishes.apk" class="btn alert-success" target="_blank">Letöltés</a>
@@ -70,7 +68,6 @@
 
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="Kelt pizzatészta">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Kelt pizzatészta</h5>
                         <a href="apks/pizza.apk" class="btn alert-success" target="_blank">Letöltés</a>
@@ -80,7 +77,6 @@
 
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="Zászlós süti">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Zászlós süti</h5>
                         <a href="apks/zaszlos_suti.apk" class="btn alert-success" target="_blank">Letöltés</a>
@@ -89,10 +85,9 @@
             </div>
         </div>
 
-        <div class="row py-4">
+        <div class="row pt-4">
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="Muffin">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Muffin</h5>
                         <a href="apks/muffin.apk" class="btn alert-success" target="_blank">Letöltés</a>
@@ -102,7 +97,6 @@
 
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="Kinder Paradiso">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Kinder Paradiso</h5>
                         <a href="apks/paradiso.apk" class="btn alert-success" target="_blank">Letöltés</a>
@@ -112,7 +106,6 @@
 
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="Vaníliás epertorta">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Vaníliás epertorta</h5>
                         <a href="apks/vanilias_epertorta.apk" class="btn alert-success" target="_blank">Letöltés</a>
@@ -122,7 +115,6 @@
 
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="Kókuszos csiga">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Kókuszos csiga</h5>
                         <a href="apks/kokuszos_csiga.apk" class="btn alert-success" target="_blank">Letöltés</a>
@@ -131,10 +123,9 @@
             </div>
         </div>
 
-        <div class="row py-4">
+        <div class="row pt-4">
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="Love">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Love</h5>
                         <a href="apks/love.apk" class="btn alert-success" target="_blank">Letöltés</a>
@@ -144,7 +135,6 @@
 
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
-                <img class="card-img-top" src="images/.png" alt="Vanced Manager">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Vanced Manager</h5>
                         <a href="apks/Vanced_Manager_base.apk" class="btn alert-success" target="_blank">Letöltés</a>
