--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/snow.css">
     <link rel="stylesheet" href="css/scrolltotop.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="css/icon_keyboard_arrow_up.css">
+    <link rel="stylesheet" href="css/icon_download.css">
 
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -22,7 +23,7 @@
 <body onload="setEventImg();">
 
     <!-- Scroll to top start -->
-    <i class="material-icons" id="myBtn" onclick="topFunction()" title="Scroll to top">keyboard_arrow_up</i>
+    <span class="material-icons" id="myBtn" onclick="topFunction()" title="Scroll to top">keyboard_arrow_up</span>
     <!-- Scroll to top end -->
 
     <!-- Navbar start -->
@@ -52,7 +53,9 @@
                 <div class="card text-center div-card-bg">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Dalma receptjei</h5>
-                        <a href="apks/dalma_receptjei.apk" class="btn alert-success" target="_blank">Letöltés</a>
+                        <a href="apks/dalma_receptjei.apk" class="btn alert-success" target="_blank">
+                            <span class="material-symbols-outlined">download</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -61,7 +64,9 @@
                 <div class="card text-center div-card-bg">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Mit egyek ma?</h5>
-                        <a href="apks/dishes.apk" class="btn alert-success" target="_blank">Letöltés</a>
+                        <a href="apks/dishes.apk" class="btn alert-success" target="_blank">
+                            <span class="material-symbols-outlined">download</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -70,7 +75,9 @@
                 <div class="card text-center div-card-bg">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Kelt pizzatészta</h5>
-                        <a href="apks/pizza.apk" class="btn alert-success" target="_blank">Letöltés</a>
+                        <a href="apks/pizza.apk" class="btn alert-success" target="_blank">
+                            <span class="material-symbols-outlined">download</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -79,7 +86,9 @@
                 <div class="card text-center div-card-bg">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Zászlós süti</h5>
-                        <a href="apks/zaszlos_suti.apk" class="btn alert-success" target="_blank">Letöltés</a>
+                        <a href="apks/zaszlos_suti.apk" class="btn alert-success" target="_blank">
+                            <span class="material-symbols-outlined">download</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -90,7 +99,9 @@
                 <div class="card text-center div-card-bg">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Muffin</h5>
-                        <a href="apks/muffin.apk" class="btn alert-success" target="_blank">Letöltés</a>
+                        <a href="apks/muffin.apk" class="btn alert-success" target="_blank">
+                            <span class="material-symbols-outlined">download</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -99,7 +110,9 @@
                 <div class="card text-center div-card-bg">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Kinder Paradiso</h5>
-                        <a href="apks/paradiso.apk" class="btn alert-success" target="_blank">Letöltés</a>
+                        <a href="apks/paradiso.apk" class="btn alert-success" target="_blank">
+                            <span class="material-symbols-outlined">download</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -108,7 +121,9 @@
                 <div class="card text-center div-card-bg">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Vaníliás epertorta</h5>
-                        <a href="apks/vanilias_epertorta.apk" class="btn alert-success" target="_blank">Letöltés</a>
+                        <a href="apks/vanilias_epertorta.apk" class="btn alert-success" target="_blank">
+                            <span class="material-symbols-outlined">download</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -117,7 +132,9 @@
                 <div class="card text-center div-card-bg">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Kókuszos csiga</h5>
-                        <a href="apks/kokuszos_csiga.apk" class="btn alert-success" target="_blank">Letöltés</a>
+                        <a href="apks/kokuszos_csiga.apk" class="btn alert-success" target="_blank">
+                            <span class="material-symbols-outlined">download</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -128,7 +145,9 @@
                 <div class="card text-center div-card-bg">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Love</h5>
-                        <a href="apks/love.apk" class="btn alert-success" target="_blank">Letöltés</a>
+                        <a href="apks/love.apk" class="btn alert-success" target="_blank">
+                            <span class="material-symbols-outlined">download</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -137,7 +156,9 @@
                 <div class="card text-center div-card-bg">
                     <div class="card-body">
                         <h5 class="card-title card-title-color">Vanced Manager</h5>
-                        <a href="apks/Vanced_Manager_base.apk" class="btn alert-success" target="_blank">Letöltés</a>
+                        <a href="apks/Vanced_Manager_base.apk" class="btn alert-success" target="_blank">
+                            <span class="material-symbols-outlined">download</span>
+                        </a>
                     </div>
                 </div>
             </div>
