--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Navbar end -->
 
     <!-- Content start -->
-    <main class="container text-center py-4">
+    <main class="container text-center pt-4">
         <div class="row">            
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
@@ -166,8 +166,10 @@
     </main>
     <!-- Content end -->
     
-    <footer class="container alert alert-success my-4">
-        Készítette: Márta Krisztián - Programtervező informatikus<br>Copyright © 2022
+    <footer class="container my-4">
+        <div class="alert alert-success">
+            Készítette: Márta Krisztián - Programtervező informatikus<br>Copyright © 2022
+        </div>
     </footer>
 
     <!-- Scroll to top script start -->
