--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Navbar end -->
 
     <!-- Content start -->
-    <main class="container text-center pt-4">
+    <main class="container pt-4">
         <div class="row">            
             <div class="col-sm pb-3 px-4">
                 <div class="card text-center div-card-bg">
