--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
     <!-- Navbar start -->
     <div class="container pt-2">
         <nav class="navbar navbar-expand-lg navbar-light alert alert-success">
+            <a class="navbar-brand" href="index.html">
+                <img src="images/favicon.ico" width="50" height="50">
+            </a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <!-- Clock widget start -->
                 <form class="form-inline my-2 my-lg-0">
